correct the yes and the no strings

--- a/app/views/channels/list.html.erb
+++ b/app/views/channels/list.html.erb
@@ -13,7 +13,7 @@
     <tr>
       <td><%= chan.channel_number -%> </td>
       <td><%= chan.name -%></td>
-      <td><%= chan.enabled? ? t(:yes) : t(:no) -%> </td>
+      <td><%= chan.enabled? ? t(:s_yes) : t(:s_no) -%> </td>
     </tr>
     <% end -%>    
   </table>
