--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -17,8 +17,7 @@
       <td><%= chan.enabled? ? t(:s_yes) : t(:s_no) -%> </td>
       <td>
         <ul>
-          <li><%= link_to t(:show), :action=>"show", :id => chan.channel_number -%></li>
-          <li><%= link_to t(:edit), :action=>"edit", :id => chan.channel_number -%></li>
+          <li><%= link_to t(:edit), edit_channel_path(chan.channel_number) -%></li>
         </ul>
       </td>
     </tr>
