--- a/app/views/programs/show.html.erb
+++ b/app/views/programs/show.html.erb
@@ -5,7 +5,7 @@
 </p>
 <p>
 	<b><%=t(:start_time) -%> :</b>
-	<%= @program.start_time %>
+	<%=l @program.start_time %>
 </p>
 <p>
 	<b><%=t(:duration) -%> :</b>
