--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -7,11 +7,11 @@
 
   <table>
     <tr>
-      <th><%=t :channel_number -%></th>
-      <th><%=t :name -%></th>
-      <th><%=t :start_time -%></th>
+      <th><%=link_to "^", programs_url(:order_by=> :channel_number, :order=>:asc) %> <%=t :channel_number -%> <%=link_to "v", programs_url(:order_by=> :channel_number, :order=>:desc) %></th>
+	  <th><%=link_to "^", programs_url(:order_by=> :title, :order=>:asc) %> <%=t :name -%> <%=link_to "v", programs_url(:order_by=> :title, :order=>:desc) %></th>
+      <th><%=link_to "^", programs_url(:order_by=> :start_time, :order=>:asc) %> <%=t :start_time -%> <%=link_to "∨", programs_url(:order_by=> :start_time, :order=>:desc) %></th>
       <th><%=t :duration -%></th>
-      <th><%=t :active -%></th>
+      <th><%=link_to "^", programs_url(:order_by=> :enabled, :order=>:asc) %> <%=t :active -%> <%=link_to "v", programs_url(:order_by=> :enabled, :order=>:desc) %></th>
       <th><%=t :actions -%> </th>
     </tr>
     <% for prog in @programs  -%>
