--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -12,6 +12,7 @@
       <th><%=link_to "^", programs_url(:order_by=> :start_time, :order=>:asc) %> <%=t :start_time -%> <%=link_to "∨", programs_url(:order_by=> :start_time, :order=>:desc) %></th>
       <th><%=t :duration -%></th>
       <th><%=link_to "^", programs_url(:order_by=> :enabled, :order=>:asc) %> <%=t :active -%> <%=link_to "v", programs_url(:order_by=> :enabled, :order=>:desc) %></th>
+	  <th><%=t :channel_number -%></th>
       <th><%=t :actions -%> </th>
     </tr>
     <% for prog in @programs  -%>
@@ -21,6 +22,7 @@
 	  <td><%=l prog.start_time -%></td>
 	  <td><%= prog.duration -%></td>
       <td><%= prog.enabled? ? t(:s_yes) : t(:s_no) -%> </td>
+  	  <td><%= @map_chans[prog.channel_number] -%></td>
       <td>
         <ul>
 		  <li><%= link_to t(:show), program_url(prog.uid) %></li>
