add information about recording

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,9 @@
 		<li>
 		<%= link_to t(:recordings), recordings_url %>
 		</li>
+		<li>
+			<%=t(:is_recording) %> <%= controller.is_recording? ? t(:s_yes) : t(:s_no) -%>
+		</li>
 	</ul>
 </div>
 <div id='container'>
