--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
 			<%=t(:is_recording) %> <%= controller.is_recording? ? t(:s_yes) : t(:s_no) -%>
 		</li>
 	</ul>
+	<%= diskusage %>
 </div>
 <div id='container'>
 	<%= yield %>
